--- a/HTML/darkmode/dark_index.html
+++ b/HTML/darkmode/dark_index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/HTML/css/style.css">
+    <link rel="stylesheet" href="/HTML/darkmode/css/dark_style.css">
     <title>Login</title>
 </head>
 <body>
     <div class="navigation">
         <ul>
             <li class="list active">
-                <a href="/HTML/darkmode/dark_index.html">
-                    <span class="icon"><ion-icon name="moon-outline"></ion-icon></span>
+                <a href="/HTML/index.html">
+                    <span class="icon"><ion-icon name="sunny-outline"></ion-icon></span>
                     <span class="text">A</span>
                 </a>
             </li>
@@ -51,8 +51,8 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <div class="main-login">
         <div class="left-login">
-            <h1>Bom dia!</h1>
-            <img src="/HTML/img/sunny-day-animate.svg" class="left-login-image" alt="animação-construção">
+            <h1>Boa noite!</h1>
+            <img src="/HTML/darkmode/img/sunny-night-animate (1).svg" class="left-login-image" alt="animação-construção">
         </div>
         <div class="right-login">
             <div class="card-login">
