Text Section and Scrollbar Effect
..

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/HTML/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Login</title>
 </head>
 <body>
     <div class="navigation">
         <ul>
             <li class="list active">
-                <a href="/HTML/darkmode/dark_index.html">
+                <a href="/darkmode/dark_index.html">
                     <span class="icon"><ion-icon name="moon-outline"></ion-icon></span>
                     <span class="text">A</span>
                 </a>
@@ -52,7 +52,7 @@
     <div class="main-login">
         <div class="left-login">
             <h1>Bom dia!</h1>
-            <img src="/HTML/img/sunny-day-animate.svg" class="left-login-image" alt="animação-construção">
+            <img src="/img/sunny-day-animate.svg" class="left-login-image" alt="animação-construção">
         </div>
         <div class="right-login">
             <div class="card-login">
@@ -69,6 +69,16 @@
             </div>
         </div>
     </div>
+    <section>
+        <div id="progressbar"></div>
+        <div id="scrollPath"></div>
+        <section>
+            <h2>Bla Bla Bla</h2>
+            <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</p>
+            <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</p>
+        </section>
+        
+    </section>
     
 </body>
 </html>
